# pyditor

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
pyditor/: __main__.py  main.py  menu.py  runner.py  utils.py
